--- a/docs/annual_reports/year1/Q1.md
+++ b/docs/annual_reports/year1/Q1.md
@@ -1,7 +1,7 @@
 # 애니메이션 파일 정리 애플리케이션 - 1년차 1분기 개발 계획
 
 ## 개발 목표
-1년차 1분기는 프로젝트 초기 단계로, 기본 비전을 정립하고 핵심 기술 스택을 결정합니다.
+1년차 1분기는 프로젝트 초기 단계로, 기본 비전을 정립하고 핵심 기술 스택을 결정합니다. 특히 모든 외부 API와 데이터베이스 연동을 플러그인 방식으로 구현하여 높은 확장성과 유연성을 갖춘 아키텍처를 설계합니다.
 
 > **중요**: 모든 개발 단계에서 변경사항 적용 후 프로그램을 실행하여 기능이 정상적으로 작동하는지 확인해야 합니다. 어떤 변경이든 전체 시스템 안정성을 훼손해서는 안 됩니다.
 
@@ -12,18 +12,22 @@
   - 애니메이션 파일 정리 기능 정의
   - 메타데이터 통합 범위 설정
   - 사용자 편의성 목표 설정
+  - 플러그인 기반 아키텍처 비전 수립
 - [x] 주요 기능 요구사항 상세 문서화
   - 파일 감지 및 식별 요구사항
   - 메타데이터 수집 요구사항
   - 파일 정리 및 이름 변경 요구사항
   - 사용자 인터페이스 요구사항
+  - 플러그인 관리 요구사항
 - [x] 사용자 페르소나 및 주요 사용 사례 정의
   - 주 사용자층 정의 및 니즈 분석
   - 핵심 사용 시나리오 10개 이상 도출
+  - 다양한 메타데이터 소스 활용 시나리오
 - [x] 기술적 제약조건 및 비기능적 요구사항 정의
   - 성능 요구사항 (대용량 파일 처리 속도)
   - 안정성 및 오류 처리 요구사항
   - 확장성 요구사항
+  - 플러그인 개발 편의성 요구사항
 
 ### 시스템 아키텍처 초기 설계
 - [x] 전체 시스템 아키텍처 설계 (모듈 구조도)
@@ -33,29 +37,54 @@
 - [x] 주요 컴포넌트 간 인터페이스 정의
   - 모듈 간 API 설계
   - 이벤트 기반 통신 구조 정의
+  - 플러그인 인터페이스 초안 작성
 - [x] 데이터 흐름 다이어그램 작성
   - 파일 감지부터 정리까지 데이터 흐름
   - 메타데이터 수집 및 저장 흐름
+  - 플러그인 간 데이터 교환 흐름
 - [x] 확장성 고려한 설계 접근법 수립
   - 플러그인 아키텍처 상세 설계
   - 향후 기능 확장을 위한 인터페이스 설계
+  - 플러그인 확장 포인트 정의
 
 ### 핵심 기술 스택 조사 및 선정
 - [x] GUI 프레임워크 조사 및 PySide6 적합성 평가
   - 최소 3개 이상 프레임워크 벤치마킹
   - 성능, 문서화, 커뮤니티 지원 비교
+  - 플러그인 UI 통합 가능성 평가
 - [x] 데이터베이스 옵션 조사 및 SQLite 검증
   - 로컬 데이터베이스 3개 이상 벤치마킹
   - 대용량 데이터 처리 성능 비교
+  - 플러그인 데이터 저장 전략 검토
 - [x] ORM 라이브러리 조사 및 SQLAlchemy 선정 검토
   - 최소 2개 이상 ORM 라이브러리 비교
   - 코드 복잡성 및 유지보수성 평가
+  - 플러그인 데이터 모델 확장성 검토
 - [x] 네트워킹 및 API 관련 라이브러리 조사
   - HTTP 클라이언트 라이브러리 비교
   - 비동기 요청 처리 옵션 검토
+  - 다양한 API 연동을 위한 추상화 방안
 - [x] 파일 시스템 감시 라이브러리 조사
   - Watchdog 및 대안 라이브러리 평가
   - OS별 동작 일관성 검증
+
+### 플러그인 아키텍처 조사 및 설계
+- [x] 기존 Python 플러그인 시스템 연구
+  - 주요 Python 플러그인 프레임워크 분석
+  - 장단점 및 적용 가능성 평가
+  - 참조 구현 검토
+- [x] 플러그인 발견 및 로딩 메커니즘 설계
+  - 플러그인 패키지 구조 정의
+  - 메타데이터 형식 결정
+  - 동적 로딩 방식 선정
+- [x] 플러그인 인터페이스 초안 설계
+  - 주요 확장점 식별
+  - 공통 인터페이스 정의
+  - 타입 힌트 및 문서화 전략
+- [x] 플러그인 설정 관리 방안 연구
+  - 설정 저장 및 로드 메커니즘
+  - UI 통합 방식 설계
+  - 기본값 및 스키마 검증 방안
 
 ### 핵심 알고리즘 조사
 - [x] ED2K 해시 계산 알고리즘 연구
@@ -65,12 +94,14 @@
   - 해시 기반 식별 외 대안 방법 조사
   - 부분 파일 매칭 가능성 연구
 - [x] 메타데이터 API 연동 방식 조사
-  - AniDB API 문서 분석
+  - TMDB API 문서 분석
   - 요청 제한 및 처리 전략 수립
+  - 다양한 메타데이터 소스 통합 방안
 
 ## 예상 결과물
 - 프로젝트 요구사항 명세서 (최소 20페이지)
 - 시스템 아키텍처 다이어그램 (컴포넌트, 시퀀스, 클래스 다이어그램)
+- 플러그인 아키텍처 설계 문서 (인터페이스 정의, 확장점, 예제 코드)
 - 기술 스택 선정 보고서 (비교 매트릭스 포함)
 - 핵심 알고리즘 연구 보고서 (성능 테스트 결과 포함)
 - 초기 프로토타입 코드 (핵심 알고리즘 구현)
@@ -85,3 +116,6 @@
 - **위험**: API 요청 제한으로 인한 메타데이터 수집 지연
   - **대응**: 캐싱 전략 및 분산 요청 스케줄링 설계
   - **검증 방법**: 시뮬레이션 테스트
+- **위험**: 플러그인 인터페이스 설계 불완전으로 인한 제약
+  - **대응**: 충분한 사용 사례 연구 및 유연한 인터페이스 설계
+  - **검증 방법**: 다양한 메타데이터 소스에 대한 개념 증명 구현
