--- a/docs/annual_reports/year1/Q2.md
+++ b/docs/annual_reports/year1/Q2.md
@@ -1,7 +1,7 @@
 # 애니메이션 파일 정리 애플리케이션 - 1년차 2분기 개발 계획
 
 ## 개발 목표
-1년차 2분기는 기본 프로젝트 구조를 확립하고 초기 프로토타입 개발에 집중합니다.
+1년차 2분기는 기본 프로젝트 구조를 확립하고 초기 프로토타입 개발에 집중합니다. 특히 확장 가능한 플러그인 아키텍처의 기반을 마련하여 다양한 메타데이터 소스 및 외부 서비스를 유연하게 활용할 수 있도록 합니다.
 
 > **중요**: 모든 개발 단계에서 변경사항 적용 후 프로그램을 실행하여 기능이 정상적으로 작동하는지 확인해야 합니다. 어떤 변경이든 전체 시스템 안정성을 훼손해서는 안 됩니다.
 
@@ -10,6 +10,7 @@
 ### 기본 프로젝트 구조 확립
 - [x] 폴더 구조 및 모듈화 설계 구현
   - 핵심 모듈 분리 (core, ui, data, api, utils)
+  - 플러그인 모듈 구조 설계 (plugins)
   - 패키지 초기화 파일 구성
   - 설정 파일 관리 구조 설계
 - [x] 버전 관리 시스템 설정 및 초기화
@@ -24,6 +25,23 @@
   - PEP8 스타일 가이드 채택
   - 문서화 규칙 (docstring 형식)
   - 코드 리뷰 체크리스트 작성
+
+### 플러그인 시스템 기초 설계
+- [x] 플러그인 기본 아키텍처 정의
+  - 플러그인 인터페이스 초안 작성
+  - 플러그인 생명주기 관리 방안
+  - 플러그인 간 의존성 처리 설계
+  - 플러그인 설정 구조 정의
+- [x] 플러그인 검색 및 로딩 메커니즘 설계
+  - 동적 플러그인 검색 알고리즘
+  - 플러그인 메타데이터 형식 정의
+  - 플러그인 호환성 검사 로직
+  - 초기화 순서 관리 방안
+- [x] 샘플 플러그인 구조 구현
+  - 기본 플러그인 템플릿 작성
+  - 플러그인 등록 메커니즘 검증
+  - 샘플 설정 페이지 구현
+  - 에러 처리 예시 작성
 
 ### 데이터베이스 스키마 설계
 - [x] 핵심 엔티티 정의 (시리즈, 에피소드, 파일, 시청 기록 등)
@@ -64,17 +82,17 @@
   - 콜백 인터페이스 설계
   - 취소 메커니즘 구현
 
-### AniDB UDP API 연동 설계
-- [x] AniDB UDP API 문서 분석 및 요구사항 정리
+### TMDB API 연동 설계 (첫 번째 메타데이터 플러그인)
+- [x] TMDB API 문서 분석 및 요구사항 정리
   - 주요 API 엔드포인트 정리
   - 요청/응답 포맷 문서화
   - 에러 코드 및 처리 방법 정의
 - [x] 클라이언트 인증 메커니즘 설계
-  - 사용자 인증 프로세스 구현
-  - 세션 키 관리 로직
+  - API 키 관리 프로세스 구현
+  - 인증 및 권한 관리 로직
   - 재인증 메커니즘
 - [x] 기본 API 통신 클래스 구현 (연결, 인증, 요청, 응답 처리)
-  - UDP 통신 래퍼 클래스
+  - HTTP 통신 래퍼 클래스
   - 요청 형식 생성기
   - 응답 파서
   - 타임아웃 및 재시도 메커니즘
@@ -83,6 +101,11 @@
   - 요청 간격 제어 메커니즘
   - 백오프 전략 구현
   - 세션 만료 처리
+- [x] 플러그인 형태로 TMDB 클라이언트 초기 구현
+  - 기본 플러그인 인터페이스 적용
+  - 설정 페이지 프로토타입 작성
+  - 플러그인 활성화/비활성화 처리
+  - 메타데이터 변환 인터페이스 구현
 
 ### 기본 GUI 프레임워크 초기 설계
 - [x] PySide6 기본 윈도우 및 레이아웃 설계
@@ -100,21 +123,26 @@
   - 사용자 정의 테마 인프라 설계
 - [x] 기본 설정 화면 설계
   - 설정 카테고리 정의
+  - 플러그인 설정 통합 프레임워크
   - 설정 저장/로드 메커니즘
   - 기본값 및 검증 로직
 
 ## 예상 결과물
 - 기본 프로젝트 구조 및 개발 환경 (폴더 구조, 가상 환경, git 설정)
+- 플러그인 시스템 기초 구조 (인터페이스 정의, 로딩 메커니즘, 샘플 구현)
 - 데이터베이스 스키마 및 ORM 모델 (완전한 ERD 및 SQLAlchemy 클래스)
 - ED2K 해시 계산 프로토타입 (멀티스레딩 지원, 성능 테스트 결과)
-- AniDB 연동 기본 클래스 (인증, 파일 매칭, 메타데이터 검색 기능)
+- TMDB API 플러그인 초기 버전 (인증, 검색, 메타데이터 조회 기능)
 - 초기 GUI 프로토타입 (기본 레이아웃 및 핵심 컴포넌트)
 - 단위 테스트 스위트 (각 모듈별 최소 80% 커버리지)
 
 ## 위험 요소 및 대응 계획
-- **위험**: AniDB API 제한 및 차단 이슈
+- **위험**: TMDB API 제한 및 차단 이슈
   - **대응**: 요청 큐 및 지연 메커니즘, 캐싱 전략 수립
   - **검증 방법**: 24시간 연속 API 사용 시뮬레이션 테스트
+- **위험**: 플러그인 아키텍처 설계 불완전으로 인한 재작업 필요
+  - **대응**: 확장성 있는 인터페이스 설계, 초기 테스트 케이스 작성
+  - **검증 방법**: 다양한 플러그인 시나리오 테스트, 모의 구현체 검증
 - **위험**: 데이터베이스 스키마 설계 불완전성
   - **대응**: 변경 가능한 유연한 설계 및 마이그레이션 계획 수립
   - **검증 방법**: 다양한 시나리오에 대한 데이터 모델링 검증
@@ -123,8 +151,9 @@
   - **검증 방법**: 스트레스 테스트 및 경쟁 조건 시뮬레이션
 
 ## 마일스톤
-- **주 4**: 프로젝트 구조 및 개발 환경 설정 완료
+- **주 3**: 프로젝트 구조 및 플러그인 시스템 기초 설계 완료
+- **주 4**: 개발 환경 설정 완료
 - **주 6**: 데이터베이스 스키마 및 ORM 모델 구현 완료
 - **주 8**: ED2K 해시 계산 알고리즘 프로토타입 완성
-- **주 10**: AniDB UDP API 연동 기본 기능 구현
+- **주 10**: TMDB API 플러그인 초기 버전 구현
 - **주 12**: 기본 GUI 프레임워크 프로토타입 완성 및 2분기 통합 테스트 
