--- a/docs/annual_reports/year1/Q4.md
+++ b/docs/annual_reports/year1/Q4.md
@@ -1,7 +1,7 @@
 # 애니메이션 파일 정리 애플리케이션 - 1년차 4분기 개발 계획
 
 ## 개발 목표
-1년차 4분기는 1년차 개발의 마무리 단계로, PySide6 GUI 프레임워크 구축과 메타데이터 플러그인 구조의 초기 설계에 집중합니다.
+1년차 4분기는 1년차 개발의 마무리 단계로, PySide6 GUI 프레임워크 구축과 메타데이터 플러그인 구조의 견고화 및 확장에 집중합니다. 특히 사용자가 설정에서 다양한 메타데이터 소스와 외부 서비스를 쉽게 선택하고 전환할 수 있는 유연한 플러그인 아키텍처를 완성합니다.
 
 > **중요**: 모든 개발 단계에서 변경사항 적용 후 프로그램을 실행하여 기능이 정상적으로 작동하는지 확인해야 합니다. 어떤 변경이든 전체 시스템 안정성을 훼손해서는 안 됩니다.
 
@@ -39,59 +39,86 @@
   - 취소/일시정지 컨트롤
   - 세부 상태 로그 뷰
 
-### 메타데이터 플러그인 구조 설계
-- [ ] 플러그인 인터페이스 정의 (추상 클래스 및 메서드)
-  - 핵심 메타데이터 인터페이스 설계
+### 고급 플러그인 시스템 구현
+- [ ] 통합 플러그인 관리 패널 개발
+  - 설치된 플러그인 목록 및 상태 표시
+  - 플러그인 활성화/비활성화 컨트롤
+  - 플러그인 상세 정보 및 설정 접근
+  - 새 플러그인 설치 인터페이스
+- [ ] 플러그인 의존성 및 충돌 관리 시스템
+  - 의존성 그래프 분석 알고리즘
+  - 버전 호환성 검사 강화
+  - 충돌 감지 및 해결 메커니즘
+  - 업그레이드 안전성 검증
+- [ ] 플러그인 이벤트 시스템 확장
+  - 애플리케이션 이벤트 구독 메커니즘
+  - 플러그인 간 이벤트 전파
+  - 비동기 이벤트 처리 지원
+  - 이벤트 로깅 및 모니터링
+- [ ] 플러그인 API 안정화 및 문서화
+  - 공개 API 확정 및 버전 관리
+  - 개발자 문서 및 튜토리얼 작성
+  - 예제 플러그인 템플릿 제공
+  - API 변경 관리 정책 수립
+- [ ] 플러그인 자동 업데이트 메커니즘
+  - 업데이트 확인 및 알림 시스템
+  - 백그라운드 다운로드 및 설치
+  - 롤백 및 복구 메커니즘
+  - 업데이트 기록 관리
+
+### 메타데이터 플러그인 아키텍처 완성
+- [ ] 메타데이터 플러그인 인터페이스 최종화
+  - 핵심 메타데이터 인터페이스 확정
   - 확장 인터페이스 정의
   - 생명주기 메서드 정의
   - 이벤트 구독 메커니즘
-- [ ] AniDB API를 첫 번째 플러그인으로 리팩토링
+- [ ] TMDB API를 첫 번째 메타데이터 플러그인으로 리팩토링
   - 기존 코드 인터페이스 조정
   - 의존성 분리 및 격리
   - 테스트 케이스 마이그레이션
   - 설정 모듈 분리
-- [ ] 플러그인 로딩 및 관리 시스템 설계
+- [ ] 플러그인 로딩 및 관리 시스템 개선
   - 동적 플러그인 검색 및 로드
   - 버전 호환성 검사
   - 종속성 관리
   - 플러그인 활성화/비활성화
-- [ ] 플러그인 설정 저장 및 로드 메커니즘
+- [ ] 플러그인 설정 저장 및 로드 메커니즘 강화
   - 플러그인별 설정 네임스페이스
   - 기본값 및 스키마 정의
   - 설정 변경 감지 및 적용
   - 설정 마이그레이션 지원
-- [ ] 플러그인 우선순위 및 충돌 해결 규칙 정의
-  - 우선순위 체계 설계
-  - 메타데이터 머지 전략
-  - 충돌 감지 알고리즘
-  - 사용자 개입 인터페이스
+- [ ] 메타데이터 플러그인 우선순위 및 선택 시스템 구현
+  - 메타데이터 소스 우선순위 설정 UI
+  - 메타데이터별 소스 선택 옵션
+  - 자동/수동 모드 전환
+  - 결과 신뢰도 평가 시스템
 
-### TMDB API 플러그인 개발 착수
-- [ ] TMDB API 연동 기본 클래스 구현
+### 추가 메타데이터 소스 플러그인 개발
+- [ ] TMDB API 플러그인 개선 및 기능 확장
   - RESTful 클라이언트 구현
   - 응답 파싱 및 오류 처리
   - 요청 직렬화 및 인코딩
   - API 버전 호환성 관리
-- [ ] 인증 및 API 키 관리 로직
-  - API 키 검증 및 저장
-  - 사용자 인증 흐름
-  - 보안 저장 메커니즘
-  - 토큰 새로고침 로직
-- [ ] 애니메이션 검색 및 메타데이터 추출 구현
-  - 검색 쿼리 최적화
-  - 영화/TV 시리즈 구분 처리
-  - 메타데이터 필드 매핑
-  - 다국어 지원 및 번역
-- [ ] 포스터 및 이미지 처리 로직
-  - 이미지 다운로드 및 캐싱
-  - 썸네일 생성 및 크기 조정
-  - 이미지 품질 옵션
-  - 다운로드 재시도 로직
-- [ ] 캐싱 및 요청 제한 관리
-  - 로컬 캐시 구현
-  - API 요청 제한 추적
-  - 요청 스로틀링
-  - 우선순위 기반 요청 관리
+- [ ] 로컬 파일 메타데이터 플러그인 개발
+  - 파일명 파싱 및 정보 추출 로직
+  - NFO/XML 파일 지원
+  - 내장 이미지 추출
+  - 로컬 캐시 연동
+- [ ] 더미 메타데이터 플러그인 구현 (테스트용)
+  - 무작위 데이터 생성
+  - 지연 및 오류 시뮬레이션
+  - 메타데이터 일관성 검증
+  - 성능 테스트 지원
+- [ ] 메타데이터 통합 및 충돌 해결 시스템
+  - 다중 소스 병합 알고리즘
+  - 충돌 감지 및 해결 규칙
+  - 사용자 선호도 반영
+  - 데이터 품질 평가 메커니즘
+- [ ] 플러그인 확장 가이드 및 샘플 작성
+  - 개발자 가이드 문서화
+  - 메타데이터 소스 통합 모범 사례
+  - 코드 샘플 및 템플릿
+  - 테스트 및 디버깅 방법론
 
 ### 기본 파일 정리 기능 프로토타입
 - [ ] 폴더 구조 생성 로직 구현 (연도/분기/시리즈)
@@ -149,8 +176,10 @@
 
 ## 예상 결과물
 - 완성된 기본 GUI 인터페이스 (다크/라이트 테마, 모듈식 패널, 설정 화면)
-- 메타데이터 플러그인 구조 및 AniDB 플러그인 (완전 리팩토링된 버전)
-- TMDB API 플러그인 초기 버전 (검색, 메타데이터 가져오기, 이미지 처리)
+- 견고한 플러그인 관리 시스템 (설치, 구성, 업데이트, 의존성 관리)
+- 메타데이터 플러그인 아키텍처 및 다중 소스 지원 (TMDB, 로컬 파일 등)
+- 메타데이터 소스 전환 및 우선순위 설정 인터페이스
+- 플러그인 개발자 문서 및 샘플 코드
 - 기본 파일 정리 기능 프로토타입 (폴더 생성, 이름 변경, 시뮬레이션 모드)
 - 1년차 개발 평가 보고서 (성과, 문제점, 교훈) 및 2년차 상세 계획
 - 내부 테스터 피드백 분석 및 개선 우선순위 목록
@@ -160,16 +189,20 @@
 - **위험**: GUI와 백엔드 처리 간 반응성 저하
   - **대응**: 멀티스레딩 및 비동기 처리 패턴 적용, 작업 큐 최적화
   - **검증 방법**: 고부하 상황에서 UI 응답 시간 측정, 10초 이상 작업의 취소 가능성 검증
-- **위험**: 플러그인 구조의 복잡성 증가
-  - **대응**: 명확한 인터페이스 정의, 간단한 참조 구현 제공, 문서화 강화
-  - **검증 방법**: 외부 개발자 대상 가상 플러그인 개발 테스트, 통합 테스트 자동화
+- **위험**: 플러그인 구조의 복잡성 증가 및 관리 어려움
+  - **대응**: 명확한 인터페이스 정의, 포괄적인 문서화, 자동 검증 도구 개발
+  - **검증 방법**: 외부 개발자 대상 플러그인 개발 시나리오 테스트, 통합 테스트 자동화
+- **위험**: 메타데이터 소스 간 통합 및 충돌 해결 복잡성
+  - **대응**: 단계적 통합 전략, 명확한 우선순위 규칙, 사용자 조정 옵션 제공
+  - **검증 방법**: 다양한 충돌 시나리오 테스트, 메타데이터 품질 평가 지표 개발
 - **위험**: 파일 처리 중 예상치 못한 오류로 인한 데이터 손실
   - **대응**: 트랜잭션 기반 파일 작업, 백업 메커니즘, 단계별 검증
   - **검증 방법**: 시스템 충돌 시뮬레이션, 복구 기능 테스트, 엣지 케이스 테스트
 
 ## 마일스톤
 - **주 3**: PySide6 GUI 프레임워크 기본 구조 완성
-- **주 6**: 메타데이터 플러그인 아키텍처 구현 및 AniDB 리팩토링
-- **주 9**: TMDB 플러그인 및 기본 파일 정리 기능 구현
+- **주 5**: 고급 플러그인 시스템 구현 완료
+- **주 7**: 메타데이터 플러그인 아키텍처 최종화 및 소스 전환 인터페이스 구현
+- **주 9**: 추가 메타데이터 소스 플러그인 및 기본 파일 정리 기능 구현
 - **주 11**: 통합 테스트 및 내부 사용자 피드백 수집
 - **주 13**: 1년차 평가 완료 및 2년차 계획 확정, 알파 빌드 배포 
