--- a/docs/annual_reports/year1/Q3.md
+++ b/docs/annual_reports/year1/Q3.md
@@ -1,28 +1,50 @@
 # 애니메이션 파일 정리 애플리케이션 - 1년차 3분기 개발 계획
 
 ## 개발 목표
-1년차 3분기는 핵심 기능 구현 단계로 진입하여 파일 식별 및 메타데이터 수집 모듈을 구현합니다.
+1년차 3분기는 핵심 기능 구현 단계로 진입하여 파일 식별 및 메타데이터 수집 모듈을 구현합니다. 모든 외부 API 및 데이터 소스는 플러그인 구조로 설계하여 사용자가 필요에 따라 설정에서 쉽게 전환할 수 있도록 합니다.
 
 > **중요**: 모든 개발 단계에서 변경사항 적용 후 프로그램을 실행하여 기능이 정상적으로 작동하는지 확인해야 합니다. 어떤 변경이든 전체 시스템 안정성을 훼손해서는 안 됩니다.
 
 ## 주요 작업 항목
 
-### AniDB 연동 완성
-- [ ] AniDB UDP API 클라이언트 구현 완료
-  - 패킷 구조 정의 및 직렬화/역직렬화
-  - 인증 및 세션 관리 완성
+### 메타데이터 플러그인 기본 구조 설계
+- [ ] 메타데이터 공급자 플러그인 인터페이스 정의
+  - 추상 기본 클래스 설계
+  - 필수 구현 메서드 정의
+  - 플러그인 등록 및 검색 메커니즘
+  - 버전 호환성 관리 체계
+- [ ] 플러그인 로더 및 관리자 클래스 구현
+  - 동적 플러그인 로딩 시스템
+  - 플러그인 활성화/비활성화 메커니즘
+  - 오류 처리 및 격리 시스템
+  - 의존성 관리 기능
+- [ ] 플러그인 설정 프레임워크 구축
+  - 플러그인별 설정 UI 연동 인터페이스
+  - 설정 저장 및 로드 시스템
+  - 설정 유효성 검증 체계
+  - 기본값 관리 메커니즘
+- [ ] 플러그인 우선순위 및 폴백 시스템 구현
+  - 우선순위 기반 메타데이터 요청 처리
+  - 대체 플러그인 자동 전환 로직
+  - 결과 병합 및 충돌 해결 전략
+  - 사용자 선호도 설정 인터페이스
+
+### TMDB API 연동 완성 (첫 번째 메타데이터 플러그인)
+- [ ] TMDB REST API 클라이언트 구현 완료
+  - API 요청/응답 구조 정의
+  - 인증 및 API 키 관리 완성
   - 요청/응답 타입별 핸들러 구현
   - 타임아웃 및 연결 오류 처리
-- [ ] 주요 명령어 지원 (AUTH, ANIME, FILE, MYLIST 등)
-  - AUTH 명령어 및 세션 유지 로직
-  - ANIME 명령어로 시리즈 정보 검색
-  - FILE 명령어로 파일 매칭
-  - MYLIST 명령어로 시청 상태 관리
-  - GROUP/CHARACTER 명령어 지원
+- [ ] 주요 엔드포인트 지원 (인증, 검색, 영화/TV 시리즈 정보 등)
+  - 인증 메커니즘 및 API 키 관리 로직
+  - 검색 기능 구현 (영화, TV 시리즈, 시즌, 에피소드)
+  - 상세 정보 조회 기능 구현
+  - 이미지 및 포스터 조회 기능
+  - 관련 작품 및 추천 작품 조회 기능
 - [ ] 응답 파싱 및 구조화된 데이터 변환
-  - API 응답 파서 구현
+  - JSON 응답 파서 구현
   - 데이터 모델로 변환 로직
-  - XML/데이터 파싱 예외 처리
+  - JSON/데이터 파싱 예외 처리
   - 메타데이터 정규화 및 통합
 - [ ] 오류 처리 및 재시도 메커니즘 구현
   - 오류 코드별 처리 전략
@@ -105,17 +127,19 @@
   - 이미지 및 포스터 표시
   - 관련 정보 링크
   - 데이터 편집 인터페이스
-- [ ] 설정 메뉴 구현
-  - 카테고리별 설정 구성
-  - 설정 검증 및 적용
-  - 프로필 관리 시스템
-  - 설정 가져오기/내보내기
+- [ ] 플러그인 관리 및 설정 인터페이스
+  - 설치된 플러그인 목록 및 상태 표시
+  - 플러그인 활성화/비활성화 컨트롤
+  - 플러그인별 설정 패널
+  - 우선순위 조정 인터페이스
+  - 플러그인 업데이트 관리 기능
 
 ### 초기 통합 테스트
 - [ ] 핵심 모듈 유닛 테스트 작성
   - 해시 계산 모듈 테스트
   - API 클라이언트 테스트
   - 파일 식별 모듈 테스트
+  - 플러그인 시스템 테스트
   - 캐시 시스템 테스트
 - [ ] 파일 식별-메타데이터 수집 통합 테스트
   - 전체 워크플로우 테스트
@@ -134,10 +158,11 @@
   - 디버그 정보 수집기
 
 ## 예상 결과물
-- 완성된 AniDB 연동 모듈 (모든 주요 명령어 지원, 에러 처리, 테스트 케이스)
+- 메타데이터 플러그인 아키텍처 및 인터페이스 (플러그인 관리, 설정, 우선순위 조정 기능)
+- 완성된 TMDB API 플러그인 (인증, 검색, 상세 정보 조회, 에러 처리, 테스트 케이스)
 - 최적화된 파일 식별 시스템 (멀티스레딩, 캐싱, 보조 식별 로직)
 - 메타데이터 캐싱 시스템 (검색 기능, 오프라인 지원)
-- 기본 GUI 인터페이스 (설정, 파일 탐색, 메타데이터 표시)
+- 기본 GUI 인터페이스 (설정, 파일 탐색, 메타데이터 표시, 플러그인 관리)
 - 테스트 및 로깅 프레임워크 (자동화된 테스트, 성능 측정, 로그 분석)
 - 통합 시스템 프로토타입 (모든 구현 모듈 연동 데모)
 
@@ -145,16 +170,20 @@
 - **위험**: 대량 파일 처리 시 성능 저하
   - **대응**: 점진적 처리, 백그라운드 작업 분리, 우선순위 큐 도입
   - **검증 방법**: 1만 개 이상 파일 처리 성능 테스트, 메모리 사용량 모니터링
-- **위험**: AniDB API 변경 또는 제약 증가
-  - **대응**: 모듈화된 설계로 유연성 확보, 대체 식별 방법 준비
+- **위험**: TMDB API 변경 또는 제약 증가
+  - **대응**: 모듈화된 설계로 유연성 확보, 대체 플러그인 준비
   - **검증 방법**: API 모의 서버로 다양한 오류 시나리오 테스트
+- **위험**: 플러그인 인터페이스 설계 불완전으로 인한 확장성 제한
+  - **대응**: 확장 가능한 인터페이스 설계, 버전 관리 메커니즘 포함
+  - **검증 방법**: 다양한 메타데이터 소스에 대한 모의 플러그인 구현 테스트
 - **위험**: GUI 응답성 저하 문제
   - **대응**: 작업 스레드 분리, 비동기 업데이트, 점진적 UI 렌더링
   - **검증 방법**: UI 응답 시간 측정, 프로파일링 및 병목 식별
 
 ## 마일스톤
-- **주 4**: AniDB API 클라이언트 완성 및 테스트
+- **주 3**: 메타데이터 플러그인 구조 설계 완료
+- **주 4**: TMDB API 클라이언트 완성 및 플러그인 구현
 - **주 6**: 파일 식별 모듈 최적화 완료
 - **주 8**: 메타데이터 캐싱 시스템 구현
-- **주 10**: 기본 GUI 프레임워크 구현
+- **주 10**: 기본 GUI 프레임워크 및 플러그인 설정 UI 구현
 - **주 12**: 통합 테스트 및 3분기 프로토타입 완성 
